Add AccountController and TeacherController integrations tests